frontend/src/routes/auth/styles.css
.screen {
  min-height: 100vh;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  gap: 1rem;
}

.register {
  text-align: right;
  display: flex;
  flex-direction: column;
  width: 360px;
}

.register-label {
  margin-top: 1rem;
}

.form {
  max-width: 360px;
  display: flex;
  flex-direction: column;
  gap: 1rem;
}

.remember-me {
  display: flex;
  flex-direction: row;
}

@media only screen and (max-width: 560px) {
  .register {
    width: 300px;
  }
}

